[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/level.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/player_cat.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/programmer-art/programmer-art.tres" type="TileSet" id=3]
[ext_resource path="res://src/grid.gd" type="Script" id=4]
[ext_resource path="res://art/programmer-art/selection-outline.png" type="Texture" id=5]
[ext_resource path="res://src/F3Debug.gd" type="Script" id=6]
[ext_resource path="res://scenes/obstacles/obstacle-splitz.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/spawns/mob_spawn.tscn" type="PackedScene" id=8]

[node name="main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
level_path = "res://scenes/levels/level1.tscn"

[node name="hud" type="CanvasLayer" parent="."]

[node name="debug_label" type="Label" parent="hud"]
margin_left = 6.0
margin_top = 4.0
margin_right = 82.0
margin_bottom = 18.0
text = "debug_label"
script = ExtResource( 6 )

[node name="actors" type="Node2D" parent="."]

[node name="mobs" type="Node2D" parent="actors"]

[node name="Player" parent="actors" instance=ExtResource( 2 )]

[node name="obstacles" type="Node2D" parent="."]

[node name="obstacle-splitz" parent="obstacles" instance=ExtResource( 7 )]
position = Vector2( 317, 131 )
scale = Vector2( 0.56, 1.24 )

[node name="obstacle-splitz2" parent="obstacles" instance=ExtResource( 7 )]
position = Vector2( 56, 74 )
scale = Vector2( 0.56, 1.24 )

[node name="obstacle-splitz3" parent="obstacles" instance=ExtResource( 7 )]
position = Vector2( 230, 167 )
scale = Vector2( 0.56, 1.24 )

[node name="obstacle-splitz4" parent="obstacles" instance=ExtResource( 7 )]
position = Vector2( 227, 76 )
scale = Vector2( 0.56, 1.24 )

[node name="spawns" type="Node2D" parent="."]

[node name="mob_spawn_bears" parent="spawns" instance=ExtResource( 8 )]
position = Vector2( 432, 32 )
waves_array = [ {
"amount": 3,
"interval": 1,
"path": "res://scenes/actors/mobs/mob_bear.tscn"
} ]

[node name="mob_spawn_boars" parent="spawns" instance=ExtResource( 8 )]
position = Vector2( 432, 64 )
waves_array = [ {
"amount": 3,
"interval": 1,
"path": "res://scenes/actors/mobs/mob_boar.tscn"
} ]

[node name="mob_spawn_deer" parent="spawns" instance=ExtResource( 8 )]
position = Vector2( 432, 96 )
waves_array = [ {
"amount": 3,
"interval": 1,
"path": "res://scenes/actors/mobs/mob_deer.tscn"
} ]

[node name="mob_spawn_fox" parent="spawns" instance=ExtResource( 8 )]
position = Vector2( 432, 128 )
waves_array = [ {
"amount": 3,
"interval": 1,
"path": "res://scenes/actors/mobs/mob_fox.tscn"
} ]

[node name="mob_spawn_wolf" parent="spawns" instance=ExtResource( 8 )]
position = Vector2( 432, 161 )
waves_array = [ {
"amount": 3,
"interval": 1,
"path": "res://scenes/actors/mobs/mob_wolf.tscn"
} ]

[node name="mob_spawn_all" parent="spawns" instance=ExtResource( 8 )]
position = Vector2( 432, 180 )
waves_array = [ {
"amount": 2,
"interval": 0.8,
"path": "res://scenes/actors/mobs/mob_boar.tscn"
}, {
"amount": 2,
"interval": 0.5,
"path": "res://scenes/actors/mobs/mob_fox.tscn"
}, {
"amount": 2,
"interval": 0.5,
"path": "res://scenes/actors/mobs/mob_deer.tscn"
}, {
"amount": 2,
"interval": 0.8,
"path": "res://scenes/actors/mobs/mob_wolf.tscn"
}, {
"amount": 2,
"interval": 0.5,
"path": "res://scenes/actors/mobs/mob_bear.tscn"
} ]

[node name="grid" type="Node2D" parent="."]
z_index = -10
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="static_background" type="TileMap" parent="grid"]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -917490, 14, 0, -917489, 14, 0, -851955, 14, 0, -851954, 14, 0, -851953, 14, 0, -851952, 14, 0, -786421, 14, 0, -786420, 14, 0, -786419, 14, 0, -786418, 14, 0, -786417, 14, 0, -786416, 14, 0, -786415, 14, 0, -720886, 14, 0, -720885, 14, 0, -720884, 14, 0, -720883, 14, 0, -720882, 14, 0, -720881, 14, 0, -720880, 14, 0, -720879, 14, 0, -720878, 14, 0, -655352, 11, 0, -655351, 11, 0, -655350, 14, 0, -655349, 14, 0, -655348, 14, 0, -655347, 14, 0, -655346, 14, 0, -655345, 14, 0, -655344, 14, 0, -655343, 14, 0, -655342, 14, 0, -655341, 14, 0, -589816, 11, 0, -589815, 11, 0, -589814, 11, 0, -589813, 11, 0, -589812, 14, 0, -589811, 14, 0, -589810, 14, 0, -589809, 14, 0, -589808, 14, 0, -589807, 14, 0, -589806, 14, 0, -589805, 14, 0, -589804, 14, 0, -524281, 14, 0, -524280, 14, 0, -524279, 11, 0, -524278, 11, 0, -524277, 11, 0, -524276, 11, 0, -524275, 14, 0, -524274, 14, 0, -524273, 14, 0, -524272, 14, 0, -524271, 14, 0, -524270, 14, 0, -524269, 14, 0, -524268, 14, 0, -524267, 14, 0, -458746, 14, 0, -458745, 14, 0, -458744, 14, 0, -458743, 14, 0, -458742, 11, 0, -458741, 11, 0, -458740, 11, 0, -458739, 14, 0, -458738, 14, 0, -458737, 14, 0, -458736, 14, 0, -458735, 14, 0, -458734, 14, 0, -458733, 14, 0, -458732, 14, 0, -458731, 14, 0, -458730, 14, 0, -393211, 14, 0, -393210, 14, 0, -393209, 14, 0, -393208, 14, 0, -393207, 14, 0, -393206, 11, 0, -393205, 11, 0, -393204, 11, 0, -393203, 14, 0, -393202, 14, 0, -393201, 14, 0, -393200, 6, 0, -393199, 14, 0, -393198, 6, 0, -393197, 14, 0, -393196, 14, 0, -393195, 14, 0, -393194, 14, 0, -393193, 14, 0, -327675, 14, 0, -327674, 14, 0, -327673, 14, 0, -327672, 14, 0, -327671, 14, 0, -327670, 11, 0, -327669, 11, 0, -327668, 11, 0, -327667, 14, 0, -327666, 14, 0, -327665, 14, 0, -327664, 14, 0, -327663, 14, 0, -327662, 14, 0, -327661, 14, 0, -327660, 14, 0, -327659, 14, 0, -327658, 14, 0, -327657, 14, 0, -327656, 14, 0, -262140, 14, 0, -262139, 14, 0, -262138, 14, 0, -262137, 14, 0, -262136, 14, 0, -262135, 14, 0, -262134, 11, 0, -262133, 11, 0, -262132, 11, 0, -262131, 14, 0, -262130, 14, 0, -262129, 6, 0, -262128, 14, 0, -262127, 14, 0, -262126, 14, 0, -262125, 6, 0, -262124, 14, 0, -262123, 14, 0, -262122, 14, 0, -262121, 14, 0, -262120, 14, 0, -262119, 14, 0, -196605, 14, 0, -196604, 14, 0, -196603, 14, 0, -196602, 14, 0, -196601, 14, 0, -196600, 14, 0, -196599, 14, 0, -196598, 11, 0, -196597, 11, 0, -196596, 11, 0, -196595, 14, 0, -196594, 14, 0, -196593, 14, 0, -196592, 6, 0, -196591, 6, 0, -196590, 6, 0, -196589, 14, 0, -196588, 14, 0, -196587, 14, 0, -196586, 14, 0, -196585, 14, 0, -196584, 14, 0, -196583, 14, 0, -196582, 6, 0, -131070, 14, 0, -131069, 14, 0, -131068, 14, 0, -131067, 14, 0, -131066, 14, 0, -131065, 14, 0, -131064, 14, 0, -131063, 14, 0, -131062, 11, 0, -131061, 11, 0, -131060, 11, 0, -131059, 14, 0, -131058, 14, 0, -131057, 14, 0, -131056, 14, 0, -131055, 14, 0, -131054, 14, 0, -131053, 14, 0, -131052, 14, 0, -131051, 14, 0, -131050, 14, 0, -131049, 14, 0, -131048, 14, 0, -131047, 14, 0, -131046, 6, 0, -65535, 14, 0, -65534, 14, 0, -65533, 14, 0, -65532, 14, 0, -65531, 14, 0, -65530, 14, 0, -65529, 14, 0, -65528, 14, 0, -65527, 14, 0, -65526, 11, 0, -65525, 11, 0, -65524, 11, 0, -65523, 14, 0, -65522, 14, 0, -65521, 14, 0, -65520, 14, 0, -65519, 14, 0, -65518, 14, 0, -65517, 14, 0, -65516, 14, 0, -65515, 14, 0, -65514, 14, 0, -65513, 14, 0, -65512, 14, 0, -65511, 14, 0, -65510, 6, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 11, 0, 11, 11, 0, 12, 11, 0, 13, 14, 0, 14, 14, 0, 15, 14, 0, 16, 14, 0, 17, 14, 0, 18, 14, 0, 19, 14, 0, 20, 14, 0, 21, 14, 0, 22, 14, 0, 23, 14, 0, 24, 6, 0, 25, 6, 0, 65538, 14, 0, 65539, 14, 0, 65540, 14, 0, 65541, 14, 0, 65542, 14, 0, 65543, 14, 0, 65544, 14, 0, 65545, 14, 0, 65546, 11, 0, 65547, 11, 0, 65548, 11, 0, 65549, 14, 0, 65550, 14, 0, 65551, 14, 0, 65552, 14, 0, 65553, 14, 0, 65554, 14, 0, 65555, 14, 0, 65556, 14, 0, 65557, 14, 0, 65558, 14, 0, 65559, 6, 0, 65560, 6, 0, 131075, 14, 0, 131076, 14, 0, 131077, 14, 0, 131078, 14, 0, 131079, 14, 0, 131080, 14, 0, 131081, 14, 0, 131082, 14, 0, 131083, 11, 0, 131084, 11, 0, 131085, 11, 0, 131086, 14, 0, 131087, 14, 0, 131088, 14, 0, 131089, 14, 0, 131090, 14, 0, 131091, 14, 0, 131092, 14, 0, 131093, 14, 0, 131094, 6, 0, 131095, 6, 0, 196612, 14, 0, 196613, 14, 0, 196614, 14, 0, 196615, 14, 0, 196616, 14, 0, 196617, 14, 0, 196618, 14, 0, 196619, 11, 0, 196620, 11, 0, 196621, 11, 0, 196622, 11, 0, 196623, 14, 0, 196624, 14, 0, 196625, 14, 0, 196626, 14, 0, 196627, 14, 0, 196628, 14, 0, 196629, 6, 0, 196630, 6, 0, 262149, 14, 0, 262150, 14, 0, 262151, 14, 0, 262152, 14, 0, 262153, 14, 0, 262154, 14, 0, 262155, 14, 0, 262156, 11, 0, 262157, 11, 0, 262158, 11, 0, 262159, 14, 0, 262160, 14, 0, 262161, 14, 0, 262162, 14, 0, 262163, 14, 0, 262164, 6, 0, 262165, 6, 0, 327686, 14, 0, 327687, 14, 0, 327688, 14, 0, 327689, 14, 0, 327690, 14, 0, 327691, 14, 0, 327692, 14, 0, 327693, 11, 0, 327694, 11, 0, 327695, 11, 0, 327696, 14, 0, 327697, 14, 0, 327698, 14, 0, 327699, 6, 0, 327700, 6, 0, 393223, 14, 0, 393224, 14, 0, 393225, 14, 0, 393226, 14, 0, 393227, 14, 0, 393228, 14, 0, 393229, 14, 0, 393230, 11, 0, 393231, 11, 0, 393232, 11, 0, 393233, 14, 0, 393234, 6, 0, 393235, 6, 0, 458760, 14, 0, 458761, 14, 0, 458762, 14, 0, 458763, 14, 0, 458764, 14, 0, 458765, 14, 0, 458766, 11, 0, 458767, 11, 0, 458768, 11, 0, 458769, 6, 0, 458770, 6, 0, 524297, 14, 0, 524298, 14, 0, 524299, 14, 0, 524300, 14, 0, 524301, 14, 0, 524302, 11, 0, 524303, 11, 0, 524304, 6, 0, 524305, 6, 0, 589834, 14, 0, 589835, 14, 0, 589836, 14, 0, 589837, 14, 0, 589838, 14, 0, 589839, 6, 0, 589840, 6, 0, 655371, 14, 0, 655372, 14, 0, 655373, 14, 0, 655374, 6, 0, 655375, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 786445, 6, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="play_area" type="TileMap" parent="grid"]
visible = false
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -917490, 3, 0, -917489, 3, 0, -851955, 3, 0, -851954, 3, 0, -851953, 3, 0, -851952, 3, 0, -786420, 3, 0, -786419, 3, 0, -786418, 3, 0, -786417, 3, 0, -786416, 3, 0, -786415, 3, 0, -720885, 3, 0, -720884, 3, 0, -720883, 3, 0, -720882, 3, 0, -720881, 3, 0, -720880, 3, 0, -720879, 3, 0, -720878, 3, 0, -655350, 3, 0, -655349, 3, 0, -655348, 3, 0, -655347, 3, 0, -655346, 3, 0, -655345, 3, 0, -655344, 3, 0, -655343, 3, 0, -655342, 3, 0, -655341, 3, 0, -589815, 3, 0, -589814, 3, 0, -589813, 3, 0, -589812, 3, 0, -589811, 3, 0, -589810, 3, 0, -589809, 3, 0, -589808, 3, 0, -589807, 3, 0, -589806, 3, 0, -589805, 3, 0, -589804, 3, 0, -524280, 3, 0, -524279, 3, 0, -524278, 3, 0, -524277, 3, 0, -524276, 3, 0, -524275, 3, 0, -524274, 3, 0, -524273, 3, 0, -524272, 3, 0, -524271, 3, 0, -524270, 3, 0, -524269, 3, 0, -524268, 3, 0, -524267, 3, 0, -458745, 3, 0, -458744, 3, 0, -458743, 3, 0, -458742, 3, 0, -458741, 3, 0, -458740, 3, 0, -458739, 3, 0, -458738, 3, 0, -458737, 3, 0, -458736, 3, 0, -458735, 3, 0, -458734, 3, 0, -458733, 3, 0, -458732, 3, 0, -458731, 3, 0, -458730, 3, 0, -393210, 3, 0, -393209, 3, 0, -393208, 3, 0, -393207, 3, 0, -393206, 3, 0, -393205, 3, 0, -393204, 3, 0, -393203, 3, 0, -393202, 3, 0, -393201, 3, 0, -393200, 3, 0, -393199, 3, 0, -393198, 3, 0, -393197, 3, 0, -393196, 3, 0, -393195, 3, 0, -393194, 3, 0, -393193, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -327665, 3, 0, -327664, 3, 0, -327663, 3, 0, -327662, 3, 0, -327661, 3, 0, -327660, 3, 0, -327659, 3, 0, -327658, 3, 0, -327657, 3, 0, -327656, 3, 0, -262140, 3, 0, -262139, 3, 0, -262138, 3, 0, -262137, 3, 0, -262136, 3, 0, -262135, 3, 0, -262134, 3, 0, -262133, 3, 0, -262132, 3, 0, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -262128, 3, 0, -262127, 3, 0, -262126, 3, 0, -262125, 3, 0, -262124, 3, 0, -262123, 3, 0, -262122, 3, 0, -262121, 3, 0, -262120, 3, 0, -262119, 3, 0, -196605, 3, 0, -196604, 3, 0, -196603, 3, 0, -196602, 3, 0, -196601, 3, 0, -196600, 3, 0, -196599, 3, 0, -196598, 3, 0, -196597, 3, 0, -196596, 3, 0, -196595, 3, 0, -196594, 3, 0, -196593, 3, 0, -196592, 3, 0, -196591, 3, 0, -196590, 3, 0, -196589, 3, 0, -196588, 3, 0, -196587, 3, 0, -196586, 3, 0, -196585, 3, 0, -196584, 3, 0, -196583, 3, 0, -196582, 3, 0, -131070, 3, 0, -131069, 3, 0, -131068, 3, 0, -131067, 3, 0, -131066, 3, 0, -131065, 3, 0, -131064, 3, 0, -131063, 3, 0, -131062, 3, 0, -131061, 3, 0, -131060, 3, 0, -131059, 3, 0, -131058, 3, 0, -131057, 3, 0, -131056, 3, 0, -131055, 3, 0, -131054, 3, 0, -131053, 3, 0, -131052, 3, 0, -131051, 3, 0, -131050, 3, 0, -131049, 3, 0, -131048, 3, 0, -131047, 3, 0, -131046, 3, 0, -131045, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 393223, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 786445, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="dynamic_background" type="TileMap" parent="grid"]
mode = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 16 )
cell_tile_origin = 1
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="selection" type="Sprite" parent="grid"]
position = Vector2( -241.372, -120.29 )
texture = ExtResource( 5 )
offset = Vector2( 0, 9 )
